created js file and amended front-end layout

--- a/quiz.html
+++ b/quiz.html
@@ -9,10 +9,6 @@
 </head>
 <body>
     <div>
-        <input type="name" placeholder="Please enter name" name="name" required>
-        <button type="submit">submit</button>
-    </div>
-    <div>
         <ol>
             <li>QUESTION 1</li>
             <li>QUESTION 2</li>
@@ -25,10 +21,13 @@
             <li>QUESTION 9</li>
             <li>QUESTION 10</li>        
         </ol>
+    <div>
+        <input type="name" placeholder="Please enter name" name="name" required><br><br>
         <form action="results.html">
             <input type="submit" value="Take me to my results!" />
         </form>
     </div>
+        
 </body>
 </html>
 
