--- a/login.html
+++ b/login.html
@@ -5,22 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="mystyle.css">
+    <script src="js/myscripts.js"></script>
 </head>
 <body>
     <div>
        <h1>Welcome to Mark's quirky quiz!</h1>
-       <p>Please enter the correct username and password below (case sensitive!)</p>
+       
     </div>
-    <div>
-        <input type="text" placeholder="Please enter username" name="login" required><br>
-        <input type="text" placeholder="Please enter password" name="password" required><br>
-        <form action="quiz.html">
-            <input type="submit" value="Login and go to Quiz" />
+    <div id="login">
+        <form class="container" action="quiz.html">
+            <input type="text" name="" id="username" placeholder="Please enter username" required><br><br>
+            <input type="text" name="" id="password" placeholder="Please enter password" required><br><br>
+            <input type="submit" onclick="login()" value="Login and go to Quiz" name="submit"/><br>
+            <label id-="message"></label>    
         </form>
-        <p><a href="leaderboard.html">Current Leaderboard</a></p>
-
     </div> 
+    <div>
+        <a href="leaderboard.html" class="container">Current Leaderboard</a> 
+    </div>
 
 </body>
 </html>
