--- a/results.html
+++ b/results.html
@@ -11,14 +11,14 @@
 </head>
 <body>
     <div>
-        <h1>You scored {}/10</h1>
-        <p>Low score (1/10-4/10)<br>
+        <h1>You scored {}/5</h1>
+        <p>Low score (1/5-2/5)<br>
             <img src="/gifs/low score.gif" alt="Homer seeking shelter from the world"/>
         </p>
-        <p>Medium score (5/10-7/10)<br>
+        <p>Medium score (3/5)<br>
             <img src="/gifs/middling score.gif" alt="Larry doing his thing"/><br>
         </p>
-        <p>High score (8/10-10/10)<br>
+        <p>High score (4/5-5/5)<br>
             <img src="/gifs/high score.gif" width = "500" alt="Dr Bean has delivered the goods"/><br>
         </p>
     </div>
